--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-body {background-color: #B34343;}
+* {margin: 0;padding: 0;}
+body {background-color: #420000;}
 .main-desktop {
     width: 1000px;
     margin: auto;
@@ -39,15 +36,15 @@ body {background-color: #B34343;}
 }
 .col2 a {padding: 0 7px 5px 0;}
 #icon {
-    background-color: #5E0404;
     padding: 5px;
+    background-color: #5E0404;
     transition: all 300ms linear;
     -webkit-transition: all 300ms linear;
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     -ms-transition: all 300ms linear;
 }
-#icon:hover {margin-top: 5px;}
+#icon:hover {padding-top: 10px;background-color: #891D1D;}
 .line {
     width: 100%;
     margin-top: 20px;
@@ -63,10 +60,7 @@ i {text-align: center;opacity: 0.8;}
 .title {padding: 10px;}
 .content {margin-top: 10px;}
 .content select {padding: 5px;}
-@media only screen and (max-width: 1000px) {
-    .col2 {display: none;}
-    .main-desktop {width: 800px;}
-}
+#sch {display: none;color: white;}
 #serch {
     background: url(img/search.png) no-repeat;
     width: 100%;
@@ -84,4 +78,39 @@ i {text-align: center;opacity: 0.8;}
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+}
+.tablet {display: none;}
+@media only screen and (max-width: 1000px) {
+    .col2 {display: none;}
+    .main-desktop {width: 800px;}
+    #sch {
+        display: block;
+        width: 5px;
+        cursor: pointer;
+        float: right;
+        background: url(img/search.png) no-repeat;
+        border: none;
+        padding: 10px 0 10px 32px;
+        transition: all 300ms linear;
+        -webkit-transition: all 300ms linear;
+        -moz-transition: all 300ms linear;
+        -o-transition: all 300ms linear;
+        -ms-transition: all 300ms linear;
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+    }
+    #sch:focus {
+        width: 150px;
+        padding-right: 15px;
+        cursor: auto;
+        outline: none;
+        transition: all 300ms linear;
+        -webkit-transition: all 300ms linear;
+        -moz-transition: all 300ms linear;
+        -o-transition: all 300ms linear;
+        -ms-transition: all 300ms linear;
+    }
+    #sch:hover {background-color: #891D1D;}
+    .tablet {display: block;}
 }
