--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ i {text-align: center;opacity: 0.8;}
     box-shadow: 0 0 5px rgba(0, 0, 0, .8);
 }
 .tablet {display: none;}
+#google_translate {display: block;}
 .trd {display: none;}
 @media only screen and (max-width: 1000px) {
     .col1 {margin-left: 50px;}
@@ -115,5 +116,6 @@ i {text-align: center;opacity: 0.8;}
     }
     #sch:hover {background-color: #891D1D;}
     .tablet {display: block;}
+    #google_translate {display: none;}
     .trd {display: block;float: right;}
 }
