--- a/css/carousel.css
+++ b/css/carousel.css
@@ -52,7 +52,7 @@
 }
 
 figure:hover #trs {opacity: 0.76;filter:alpha(opacity=76);}
-    figure {
+figure {
     max-width: 700px;
     height: 400px;
     position: relative;
@@ -72,4 +72,12 @@ figcaption {
     line-height: 55px; 
     height: 55px; 
     z-index: 5;
+}
+@media only screen and (max-width: 820px) {
+    figure {
+        max-width: 500px;
+        height: 300px;
+        position: relative;
+        overflow: hidden;
+    }
 }
