--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {background-color: #420000;}
 .list li:hover {background-color: #891D1D;}
 #active {background-color: #891D1D;}
 .col1 {
-    width: 700px;
+    z-index: 2;
     margin-left: 25px;
     margin-top: 15px;
     padding-bottom: 20px;
@@ -83,11 +83,11 @@ i {text-align: center;opacity: 0.8;}
 #google_translate {display: block;}
 .trd {display: none;}
 #schh {display: none;}
-#mb {background-color: white;max-width: 300px;background-color: #5E0404;}
+#mb {background-color: white;max-width: 200px;background-color: #5E0404;}
 #mb a.active {padding: 12px 10px;border-radius: 2px;background-color: #891D1D;}
 #list-mobile {list-style: none;margin-bottom: 10px;}
-#list-mobile li {margin: 20px;}
-#list-mobile a {padding: 10px 10px;text-decoration: none;color: white;font-size: 14px;}
+#list-mobile li {margin: 35px;}
+#list-mobile a {padding: 10px 10px;text-decoration: none;color: white;font-size: 12px;}
 #list-mobile a:hover {background-color: #891D1D;}
 .searchLine {display: none;}
 .more {
@@ -157,6 +157,12 @@ i {text-align: center;opacity: 0.8;}
     position: absolute;
     background-color: white;
 }
+#opacity {
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+    position: absolute;
+    top: 0;
+}
 @media only screen and (max-width: 1000px) {
     .col1 {margin-left: 50px;}
     .col2 {display: none;}
@@ -174,9 +180,9 @@ i {text-align: center;opacity: 0.8;}
         -moz-transition: all 300ms linear;
         -o-transition: all 300ms linear;
         -ms-transition: all 300ms linear;
-        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .5);
     }
     #sch:focus {
         width: 150px;
@@ -188,6 +194,9 @@ i {text-align: center;opacity: 0.8;}
         -moz-transition: all 300ms linear;
         -o-transition: all 300ms linear;
         -ms-transition: all 300ms linear;
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     }
     #sch:hover {background-color: #891D1D;}
     .tablet {display: block;margin-top: 10px;}
@@ -203,10 +212,11 @@ i {text-align: center;opacity: 0.8;}
         display: block;
         width: 5px;
         cursor: pointer;
-        top: -120px;
-        position: relative;
+        top: 12px;
+        right: 0;
+        margin: 0 10px;
+        position: absolute;
         color: white;
-        float: right;
         background: url(img/search.png) no-repeat;
         border: none;
         padding: 10px 0 10px 32px;
@@ -215,20 +225,24 @@ i {text-align: center;opacity: 0.8;}
         -moz-transition: all 300ms linear;
         -o-transition: all 300ms linear;
         -ms-transition: all 300ms linear;
-        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .5);
     }
     #schh:focus {
         width: 150px;
         padding-right: 15px;
         cursor: auto;
         outline: none;
+        background-color: white;
         transition: all 300ms linear;
         -webkit-transition: all 300ms linear;
         -moz-transition: all 300ms linear;
         -o-transition: all 300ms linear;
         -ms-transition: all 300ms linear;
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     }
     .searchLine {
         display: block;
@@ -261,16 +275,15 @@ i {text-align: center;opacity: 0.8;}
         left: auto;
         margin-left: 10px;
     }
-    #check {
-        display: block;
-        top: -90px;
-    }
+    #check {display: block;top: -90px;}
     #schh {
-        top: -90px;
+        -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
+        box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     }
-    i {
-        font-size: 18px;
-    }
+    .col1 {text-align: center;}
+    i {font-size: 18px;}
+    #title {text-align: center;}
     .list , .tablet , .searchLine {display: none;}
     .main-desktop {width: 95%;}
 }
