--- a/css/anime.css
+++ b/css/anime.css
@@ -1,33 +1,26 @@
 .frm {
-    width: 710px;
+    width: 690px;
+    margin: auto;
     flex-direction: row;
     flex-wrap: wrap;
     display: flex;
 }
 .frame {
     width: 200px;
-    height: 150px;
-    margin: 40px 15px;
+    height: 170px;
+    margin: 20px 15px;
     background-color: black;
 }
 @media only screen and (max-width: 820px) {
-    .frm {
-        margin: auto;
-        margin-left: 20px;
-        width: 480px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        display: flex;
-    }
+    .frm {width: 500px;margin-top: 20px;}
+    .frame {width: 220px;height: 180px;}
 
 }
 @media only screen and (max-width: 610px) {
-    .frm {
-        margin: auto;
-        margin-left: 42px;
-        width: 480px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        display: flex;
-    }
+    .frm {width: 430px;margin: auto;margin-top: 0;}
+    .frame {width: 400px;height: 200px;}
+}
+@media only screen and (max-width: 470px) {
+    .frm {width: 300px;}
+    .frame {width: 270px;height: 200px;}
 }
