--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ body {background-color: #420000;}
 #active {background-color: #891D1D;}
 .col1 {
     z-index: 2;
-    margin-left: 25px;
-    margin-top: 15px;
+    margin-bottom: 20px;
     padding-bottom: 20px;
 }
 .col2 {
@@ -164,7 +163,6 @@ i {text-align: center;opacity: 0.8;}
     top: 0;
 }
 @media only screen and (max-width: 1000px) {
-    .col1 {margin-left: 50px;}
     .col2 {display: none;}
     .main-desktop {width: 800px;}
     #sch {
@@ -199,7 +197,7 @@ i {text-align: center;opacity: 0.8;}
         box-shadow: 0 0 5px rgba(0, 0, 0, .8);
     }
     #sch:hover {background-color: #891D1D;}
-    .tablet {display: block;margin-top: 10px;}
+    .tablet {display: block;margin-top: 10px;margin-left: 20px;}
     #google_translate {display: none;}
     .trd {display: block;float: right;}
 }
@@ -207,7 +205,7 @@ i {text-align: center;opacity: 0.8;}
     #sch {display: none;}
     .main-desktop {width: 600px;margin: auto;}
     .main-desktop header {width: 570px;}
-    .col1 {max-width: 550px;margin-left: auto;}
+    /* .col1 {max-width: 550px;margin-left: auto;} */
     #schh {
         display: block;
         width: 5px;
@@ -285,5 +283,6 @@ i {text-align: center;opacity: 0.8;}
     i {font-size: 18px;}
     #title {text-align: center;}
     .list , .tablet , .searchLine {display: none;}
-    .main-desktop {width: 95%;}
+    .main-desktop {width: 450px;}
 }
+@media only screen and (max-width: 470px) {.main-desktop {width: 300px;}}
