--- a/src/components/style/Main.css
+++ b/src/components/style/Main.css
@@ -10,6 +10,7 @@
 
 .title hr {
     border: 2px solid #fff;
+    border-radius: var(--border-radius);
     margin: 0px 20px 20px 20px;
 }
 
@@ -20,7 +21,9 @@
 
 .search input[type="text"] {
     background-color: transparent;
-    border: 4px solid var(--header-color);
+    border: 4px solid var(--color);
+    border-bottom-left-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
     border-right: none;
     color: white;
     outline: none;
@@ -49,6 +52,14 @@
     display: inline;
     padding: 13px 0px 14px 0px;
     
-    border: 4px solid var(--header-color);
+    border: 4px solid var(--color);
+    border-bottom-right-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
     border-left: none;
+}
+
+@media (max-width: 995px) {
+    .search input[type="text"] {
+        width: 92%;
+    }
 }
