--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -12,3 +12,9 @@ footer p {
     text-align: right;
     padding: 10px;
 }
+
+@media (max-width: 500px) {
+    footer {
+        font-size: 0.8em;
+    }
+}
