--- a/src/components/style/Header-Mobile.css
+++ b/src/components/style/Header-Mobile.css
@@ -1,25 +1,17 @@
+.header .mobile aside {
+    display: block;
+}
+
 .button {
     padding: 10px;
     width: 40px;
     height: 40px;
     position: relative;
-    /* right: 100px; */
     float: right;
     border: 1px solid var(--color);
     border-radius: var(--border-radius);
     cursor: pointer;
 }
-
-/* .collapse {
-	height: 200px;
-	overflow: hidden;
-	transition: height 0.8s;
-}
-
-.button:checked + .collapse {
-    display: block;
-    height: 200px;
-} */
 
 .button span {
     width: 18px;
@@ -44,4 +36,37 @@
     margin-top: -9px;
     margin-left: -1px;
     border: 1px solid white;
+}
+
+#demo {
+    position: absolute;
+    right: 100px;
+    transition: 0.5s all;
+    z-index: 1;
+}
+
+#demo ul {
+    padding: 0px;
+    list-style: none;
+    border: 1px solid;
+    border-radius: var(--border-radius);
+}
+
+#demo ul li {
+    text-align: center;
+    border: 1px solid black;
+    background-color: var(--color);
+    padding: 10px 25px;
+}
+
+#demo a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 25px;
+    padding: 10px 25px;
+}
+
+#demo li.user {
+    background-color: white;
+    height: 100px;
 }
