--- a/src/components/style/Main.css
+++ b/src/components/style/Main.css
@@ -1,7 +1,3 @@
-.title {
-    margin-top: 50px;
-}
-
 .title h3 {
     color: #fff;
     font-size: 1.8em;
@@ -16,20 +12,24 @@
 
 .search {
     margin-top: 25px;
-    padding-left: 20px;
 }
 
 .search input[type="text"] {
+    color: white;
     background-color: transparent;
     border: 4px solid var(--color);
     border-bottom-left-radius: var(--border-radius);
     border-top-left-radius: var(--border-radius);
     border-right: none;
-    color: white;
+    
     outline: none;
-
     padding: 10px 15px;
-    width: 95%;
+    height: 60px;
+}
+
+.search input:focus, .search input:active {
+    outline: none;
+    box-shadow: 0 0 0 0;
 }
 
 .search input[type="submit"] {
@@ -45,12 +45,10 @@
     outline: none;
     
     width: 20px;
-    height: auto;
 }
 
 .icon {
-    display: inline;
-    padding: 13px 0px 14px 0px;
+    padding: 13px 0px 13px 0px;
     
     border: 4px solid var(--color);
     border-bottom-right-radius: var(--border-radius);
@@ -58,8 +56,34 @@
     border-left: none;
 }
 
-@media (max-width: 995px) {
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 500px) {
+    .title {
+        font-size: 0.8em;
+        padding: 10px;
+    }
+
+    .search {
+        margin: auto;
+        max-width: 300px;
+    }
+
     .search input[type="text"] {
-        width: 92%;
+        padding: 10px;
+        height: 50px;
+    }
+
+    .search input[type="submit"] {
+        margin-top: 3px;
+    }
+
+    .icon {
+        padding: 7px 0px 4px 0px;
     }
 }
