--- a/src/components/style/Header-Mobile.css
+++ b/src/components/style/Header-Mobile.css
@@ -46,7 +46,8 @@
 }
 
 #demo ul {
-    padding: 0px;
+    background-color: black;
+    padding: 10px;
     list-style: none;
     border: 1px solid;
     border-radius: var(--border-radius);
@@ -56,17 +57,44 @@
     text-align: center;
     border: 1px solid black;
     background-color: var(--color);
-    padding: 10px 25px;
+    margin: 5px;
+    padding: 10px;
+    border-radius: var(--border-radius);
+    transition: 1s all;
+    cursor: pointer;
+}
+
+#demo li.user ~ li:hover {
+    transition: 1s all;
+    background-color: black;
+    border: 1px solid var(--color);
 }
 
 #demo a {
     text-decoration: none;
     color: white;
-    padding: 10px 25px;
-    padding: 10px 25px;
+    padding: 10px 55px;
 }
 
 #demo li.user {
-    background-color: white;
+    background-color: black;
     height: 100px;
+    vertical-align: middle;
+    border-right: 3px solid var(--color);
+    border-left: 3px solid var(--color);
+    cursor: auto;
+}
+
+#demo ul aside {
+    margin-top: 30px;
+}
+
+#demo li.user a {
+    border: 3px solid;
+    color: white;
+    padding: 10px 20px;
+}
+
+#demo li.user a:hover {
+    border: 3px solid var(--color);
 }
