--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -1,16 +1,30 @@
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     -webkit-box-shadow: 2px -9px 52px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px -9px 52px -2px rgba(0,0,0,0.75);
     box-shadow: 2px -9px 52px -2px rgba(0,0,0,0.75);
+
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+footer hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: var(--border-radius);
+    margin: 0px 20px 20px 20px;
 }
 
 footer p {
-    text-align: right;
-    padding: 10px;
+    margin: 0px;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+footer .container div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 @media (max-width: 500px) {
