--- a/src/components/style/Main.css
+++ b/src/components/style/Main.css
@@ -1,3 +1,7 @@
+.title {
+    margin-top: 60px;
+}
+
 .title h3 {
     color: #fff;
     font-size: 1.8em;
@@ -63,10 +67,20 @@
     flex-wrap: wrap;
 }
 
+.space {
+    justify-content: unset;
+}
+
+.link {
+    margin: 20px;
+    float: right;
+}
+
 @media (max-width: 500px) {
     .title {
         font-size: 0.8em;
         padding: 10px;
+        margin-top: 20px;
     }
 
     .search {
