--- a/src/components/style/Header.css
+++ b/src/components/style/Header.css
@@ -18,13 +18,18 @@ aside a {
     transition: 0.5s all;
 }
 
-aside a:hover {
+aside a:hover, aside a.active {
     color: white;
     text-decoration: none;
 
     border: 1px solid var(--color);
     border-radius: var(--border-radius);
     transition: 0.5s all;
+}
+
+.form-title {
+    color: white;
+    text-align: center;
 }
 
 .mobile {
