--- a/src/components/style/Main.css
+++ b/src/components/style/Main.css
@@ -52,7 +52,7 @@
 }
 
 .icon {
-    padding: 13px 0px 13px 0px;
+    padding: 12px 0px 13px 0px;
     
     border: 4px solid var(--color);
     border-bottom-right-radius: var(--border-radius);
@@ -70,6 +70,148 @@
 .link {
     margin: 20px;
     float: right;
+}
+
+form.login {
+    font-size: 1rem;
+    padding: 25px;
+    display: inline-block;
+    /* background-color: transparent; */
+    border: 2px solid #420000;
+    margin: 20px 150px;
+}
+
+form.login label {
+    color: white;
+    margin-top: 10px;
+}
+
+form.login input {
+    color: white;
+    background-color: transparent;
+    border: 4px solid var(--color);
+    border-radius: var(--border-radius);
+    width: 100%;
+    
+    outline: none;
+    padding: 10px 15px;
+    height: 60px;
+}
+
+form.login button {
+    border: 4px solid var(--color);
+    color: white;
+    background-color: var(--color);
+    border-radius: var(--border-radius);
+    margin-top: 25px;
+    padding: 10px;
+}
+
+form.login button:hover {
+    opacity: 0.6;
+}
+
+form.login a {
+    margin: 0px;
+    margin-top: 25px;
+    padding: 10px;
+}
+
+.container object {
+    margin: auto;
+    max-width: 640px;
+    max-height: 480px;
+    height: 480px;
+    width: 640px;
+}
+
+.text-watch {
+    color: white;
+    text-align: justify;
+    padding: 10px;
+}
+
+.text-watch h3 {
+    margin-top: 20px;
+}
+
+.no-left {
+    margin-left: 0px !important;
+}
+.no-right {
+    margin-right: 0px !important;
+}
+
+.category {
+    margin: 10px;
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: var(--color);
+}
+
+.comentary {
+    margin-top: 30px;
+}
+
+.comentary input {
+    color: white;
+    margin: 10px;
+    background-color: transparent;
+    border: 4px solid var(--color);
+    border-radius: var(--border-radius);
+    /* max-width: 530px; */
+    width: 100%;
+    
+    outline: none;
+    padding: 10px 15px;
+    height: 60px;
+}
+
+.line {
+    display: flex;
+}
+
+.comentary textarea {
+    width: 100%;
+    color: white;
+    background-color: transparent;
+    border: 4px solid var(--color);
+    border-radius: var(--border-radius);
+    padding: 10px 15px;
+    outline: none;
+}
+
+.comentary button {
+    color: white;
+    border: none;
+    background-color: var(--color);
+    padding: 15px;
+    border-radius: var(--border-radius);
+}
+
+.comentary button:hover {
+    opacity: 0.8;
+}
+
+div.user-comentary {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+div.user-comentary div {
+    padding: 20px;
+    background-color: var(--color);
+    max-width: 600px;
+}
+
+@media (max-width: 1000px) {
+    form.login {
+        margin: 20px 50px;
+    }
 }
 
 @media (max-width: 500px) {
