--- a/src/components/style/Item.css
+++ b/src/components/style/Item.css
@@ -62,13 +62,10 @@ a.long:hover {
 
 button.btn {
     transition: .5s all;
-    font-size: 1.25rem;
+    /* font-size: 1.25rem; */
+    padding: 10px 20px;
     border-radius: var(--border-radius);
-    background-color: var(--color);
-}
-
-button.btn:hover {
-    padding: 15px;
+    background-color:var(--btn-color);
 }
 
 button.btn a {
