--- a/src/components/style/Main.css
+++ b/src/components/style/Main.css
@@ -99,9 +99,9 @@ form.login input {
 }
 
 form.login button {
-    border: 4px solid var(--color);
+    border: 4px solid var(--btn-color);
     color: white;
-    background-color: var(--color);
+    background-color: var(--btn-color);
     border-radius: var(--border-radius);
     margin-top: 25px;
     padding: 10px;
@@ -118,11 +118,8 @@ form.login a {
 }
 
 .container object {
-    margin: auto;
-    max-width: 640px;
-    max-height: 480px;
     height: 480px;
-    width: 640px;
+    width: 100%;
 }
 
 .text-watch {
@@ -187,7 +184,7 @@ form.login a {
 .comentary button {
     color: white;
     border: none;
-    background-color: var(--color);
+    background-color: var(--btn-color);
     padding: 15px;
     border-radius: var(--border-radius);
 }
@@ -199,18 +196,67 @@ form.login a {
 div.user-comentary {
     margin-top: 100px;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-div.user-comentary div {
+div.user-comentary img {
+    background-color: #fff;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    padding-top: 10px;
+}
+
+div.user-comentary div.body {
+    display: flex;
+    font-size: .8rem;
     padding: 20px;
-    background-color: var(--color);
+    background-color: #5c0000;
     max-width: 600px;
+    margin-top: 20px;
+}
+
+div.user-comentary div.body p {
+    text-align: justify;
+}
+
+p.date {
+    padding-left: 10px;
+    display: inline-block;
+    font-size: 0.75rem;
+    color: silver;
+    margin: 0px;
+}
+
+p.user-name::first-letter {
+    text-transform: uppercase;
+}
+
+p.user-name {
+    padding: 10px 20px;
+    margin-bottom: 0px;
+}
+
+p.user-text {
+    padding: 20px;
 }
 
 @media (max-width: 1000px) {
     form.login {
         margin: 20px 50px;
+    }
+
+    div.user-comentary img {
+        width: 90px;
+        height: 90px;
+    }
+
+    p.user-name {
+        padding: 10px;
+    }
+    p.user-text {
+        padding: 10px;
     }
 }
 
