--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,6 +4,7 @@
     align-items: center;
 
     padding-right: 40px;
+    padding-left: 40px;
     font-size: 1em;
 }
 
@@ -36,6 +37,30 @@ aside a:hover, aside a.active {
     display: none;
 }
 
+/* LOGO */
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: sans-serif;
+    font-size: 1.8em;
+}
+
+.logo a, .logo a:hover {
+    text-decoration: none;
+}
+
+.logo p {
+    margin: 0;
+    color: white;
+}
+
+.logo p strong {
+    color: var(--color);
+}
+
 @media (max-width: 800px) {
     .desktop {
         display: none;
@@ -43,10 +68,6 @@ aside a:hover, aside a.active {
     
     .mobile {
         display: block;
-    }
-
-    .header {
-        justify-content: flex-end;
     }
 
     .header aside {
