--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -8,56 +8,15 @@
     padding: 20px;
 }
 
+h3.form-title {
+    color: #FFF;
+    text-align: center;
+}
+
 .title hr {
     border: 2px solid #fff;
     border-radius: var(--border-radius);
     margin: 0px 20px 20px 20px;
-}
-
-.search {
-    margin-top: 25px;
-}
-
-.search input[type="text"] {
-    color: white;
-    background-color: transparent;
-    border: 4px solid var(--color);
-    border-bottom-left-radius: var(--border-radius);
-    border-top-left-radius: var(--border-radius);
-    border-right: none;
-    
-    outline: none;
-    padding: 10px 15px;
-    height: 60px;
-}
-
-.search input:focus, .search input:active {
-    outline: none;
-    box-shadow: 0 0 0 0;
-}
-
-.search input[type="submit"] {
-    margin-right: 10px;
-
-    background-image: url('./search.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-
-    vertical-align: middle;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    
-    width: 20px;
-}
-
-.icon {
-    padding: 12px 0px 13px 0px;
-    
-    border: 4px solid var(--color);
-    border-bottom-right-radius: var(--border-radius);
-    border-top-right-radius: var(--border-radius);
-    border-left: none;
 }
 
 .content {
